<resources>
    <string name="app_name">通讯大全PDF第二版</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tel_title">一站式号码服务平台</string>

    <!-- Lead页面 -->
    <string name="lead_skiptext">skip</string>
    <string name="leadimage_description">Guide page image</string>
    <string name="leadtext_description1">Small icon 1</string>
    <string name="leadtext_description2">Small icon 2</string>
    <string name="leadtext_description3">Small icon 1</string>

    <!-- home -->
    <string name="about">关于我们</string>
    <string name="setting">设置</string>
    <string name="rocket">手机加速</string>
    <string name="softmgr">软件管理</string>
    <string name="phonemgr">手机检测</string>
    <string name="telmgr">通讯大全</string>
    <string name="filemgr">文件管理</string>
    <string name="sdclean">垃圾清理</string>

    <!-- setting -->
    <string name="setting_autostart">开机启动</string>
    <string name="setting_pushmsg">消息推送</string>
    <string name="setting_notifmsg">通知图标</string>
    <string name="setting_clear">清理缓冲</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_help">帮助说明</string>
    <string name="setting_study">意见反溃</string>
    <string name="setting_share">好友分享</string>
    <string name="setting_about">关于我们</string>
    <string name="title_activity_speedup">SpeedupActivity</string>

    <!-- soft -->
    <string name="space_all">所有空间</string>
    <string name="space_phone">手机内置空间</string>
    <string name="space_sdcard">外置存储空间</string>
    <string name="allsoft">所有软件</string>
    <string name="syssoft">系统软件</string>
    <string name="usesoft">用户软件</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_set">SetActivity</string> <!-- show app -->
    <string name="showapp_delapp">卸载所选软件</string>
    <string name="showfile_delfile">删除所选文件</string>

</resources>
